# tagmanager-mcp

./: .gitignore  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
tagmanager_mcp/: coordinator.py  server.py
tagmanager_mcp/tools/: client.py  structure.py  tags.py  triggers.py  utils.py  variables.py  versions.py
tests/: client_test.py  server_test.py  utils_test.py  versions_test.py  write_tools_test.py
